исправлены ошибки адаптива

--- a/src/blocks/_footer.html
+++ b/src/blocks/_footer.html
@@ -1,6 +1,85 @@
 <!-- footer 
 ======================================================= -->
 <footer class="footer wrapper" id="contact">
+  <div class="contact">
+    <div class="container">
+      <div class="contact__inner">
+        <div class="contact__welcome">
+          <h4 class="contact__title">Cвяжитесь с нами</h4>
+          <p class="contact__text">Спланируйте свое путешествие прямо сейчас </p>
+        </div>
+
+        <div class="contact__content">
+          <div class="contact__info">
+            <p class="contact__info-text">Наша миссия - «дать возможность каждому испытать
+              уникальность
+              мира
+              вместе с нами».</p>
+            <div class="contact__info-connection">
+              <a href="mailto:info@route7company.com" class="contact__info-item">
+                <svg width="20" height="20">
+                  <use xlink:href="./img/icons/icons.svg#email" />
+                </svg>
+                <p>info@route7company.com</p>
+              </a>
+              <a href="tel+77776665544" class="contact__info-item">
+                <svg width="20" height="20">
+                  <use xlink:href="./img/icons/icons.svg#phone" />
+                </svg>
+                <p>+7 777 666 5544</p>
+              </a>
+            </div>
+            <ul class="soclist">
+              <li class="soclist__item">
+                <a href="#" class="soclist__item-link">
+                  <svg width="20" height="20">
+                    <use xlink:href="./img/icons/icons.svg#facebook" />
+                  </svg>
+                </a>
+              </li>
+              <li class="soclist__item">
+                <a href="#" class="soclist__item-link">
+                  <svg width="20" height="20">
+                    <use xlink:href="./img/icons/icons.svg#twitter" />
+                  </svg>
+                </a>
+              </li>
+              <li class="soclist__item">
+                <a href="#" class="soclist__item-link">
+                  <svg width="20" height="20">
+                    <use xlink:href="./img/icons/icons.svg#vk" />
+                  </svg>
+                </a>
+              </li>
+              <li class="soclist__item">
+                <a href="#" class="soclist__item-link">
+                  <svg width="20" height="20">
+                    <use xlink:href="./img/icons/icons.svg#instagram" />
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <form id="contact__form" class="contact__form">
+            <div class="contact__form-inputs">
+              <div class="contact__form-input input-block">
+                <input type="text" id="contact__form-name" name="contact__form-name" class="input" placeholder="Имя:">
+              </div>
+              <div class="contact__form-input input-block">
+                <input type="text" id="contact__form-email" name="contact__form-email" class="input" placeholder="Email:">
+              </div>
+            </div>
+            <div class="contact__form-textarea input-block">
+              <textarea name="contact__form-message" id="contact__form-message" class="input" placeholder="Сообщение:"></textarea>
+            </div>
+            <button type="submit" class="contact__form-button btn">Отправить</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="footer__inner">
 
     <ul class="footer__list">
@@ -8,7 +87,7 @@
         <a class="link" href="#ways">Направления</a>
       </li>
       <li class="menu__list-item">
-        <a class="link" href="#prices">Цены</a>
+        <a class="link" href="#places">Цены</a>
       </li>
       <li class="menu__list-item">
         <a class="link" href="#gallery">Галерея</a>
@@ -25,7 +104,7 @@
     </ul>
 
     <small class="footer__copy">Создатель шаблона <b>Dmitriy Bozhko / DIGIKRASH</b></small>
-    
+
   </div>
 </footer>
 <!-- footer end -->
