--- a/src/blocks/_header.html
+++ b/src/blocks/_header.html
@@ -16,7 +16,7 @@
           <a class="link" href="#ways">Направления</a>
         </li>
         <li class="menu__list-item">
-          <a class="link" href="#prices">Цены</a>
+          <a class="link" href="#places">Цены</a>
         </li>
         <li class="menu__list-item">
           <a class="link" href="#gallery">Галерея</a>
