--- a/src/index.html
+++ b/src/index.html
@@ -195,7 +195,7 @@
             <div class="swiper-places">
                 <div class="places__inner swiper-wrapper">
                     <div class="places__item swiper-slide">
-                        <div class="places__item-img ">
+                        <div class="places__item-img">
                             <img src="./img/gallery/gallery__item-2.jpg" width="440" height="500" loading="lazy" title="Лиссабон, Португалия" alt="place-1">
                         </div>
                         <div class="places__item-content parallax-3d">
@@ -205,24 +205,22 @@
                                     поход на полдня и один день из Турина, походы выходного дня, длинные
                                     треккинг, легкие комфортные туры и ходьба на снегоступах зимой.</p>
                                 <a href="#" class="places__item-btn btn">узнать больше</a>
-                                <div class="stars__wrapper">
-                                    <div class="stars parallax-3d">
-                                        <svg width="20" height="20">
-                                            <use xlink:href="./img/icons/icons.svg#star" />
-                                        </svg>
-                                        <svg width="20" height="20">
-                                            <use xlink:href="./img/icons/icons.svg#star" />
-                                        </svg>
-                                        <svg width="20" height="20">
-                                            <use xlink:href="./img/icons/icons.svg#star" />
-                                        </svg>
-                                        <svg width="20" height="20">
-                                            <use xlink:href="./img/icons/icons.svg#star" />
-                                        </svg>
-                                        <svg width="20" height="20">
-                                            <use xlink:href="./img/icons/icons.svg#star--not" />
-                                        </svg>
-                                    </div>
+                                <div class="stars__wrapper parallax-3d">
+                                    <svg width="20" height="20" class="star parallax-3d">
+                                        <use xlink:href="./img/icons/icons.svg#star" />
+                                    </svg>
+                                    <svg width="20" height="20" class="star">
+                                        <use xlink:href="./img/icons/icons.svg#star" />
+                                    </svg>
+                                    <svg width="20" height="20" class="star">
+                                        <use xlink:href="./img/icons/icons.svg#star" />
+                                    </svg>
+                                    <svg width="20" height="20" class="star">
+                                        <use xlink:href="./img/icons/icons.svg#star" />
+                                    </svg>
+                                    <svg width="20" height="20" class="star">
+                                        <use xlink:href="./img/icons/icons.svg#star--not" />
+                                    </svg>
                                 </div>
                             </div>
                         </div>
@@ -247,19 +245,19 @@
                                 <a href="#" class="places__item-btn btn">узнать больше</a>
                                 <div class="stars__wrapper">
                                     <div class="stars parallax-3d">
-                                        <svg width="20" height="20">
+                                        <svg width="20" height="20" class="star">
                                             <use xlink:href="./img/icons/icons.svg#star" />
                                         </svg>
-                                        <svg width="20" height="20">
+                                        <svg width="20" height="20" class="star">
                                             <use xlink:href="./img/icons/icons.svg#star" />
                                         </svg>
-                                        <svg width="20" height="20">
+                                        <svg width="20" height="20" class="star">
                                             <use xlink:href="./img/icons/icons.svg#star" />
                                         </svg>
-                                        <svg width="20" height="20">
+                                        <svg width="20" height="20" class="star">
                                             <use xlink:href="./img/icons/icons.svg#star" />
                                         </svg>
-                                        <svg width="20" height="20">
+                                        <svg width="20" height="20" class="star">
                                             <use xlink:href="./img/icons/icons.svg#star" />
                                         </svg>
                                     </div>
@@ -287,19 +285,19 @@
                                 <a href="#" class="places__item-btn btn">узнать больше</a>
                                 <div class="stars__wrapper">
                                     <div class="stars parallax-3d">
-                                        <svg width="20" height="20">
+                                        <svg width="20" height="20" class="star">
                                             <use xlink:href="./img/icons/icons.svg#star" />
                                         </svg>
-                                        <svg width="20" height="20">
+                                        <svg width="20" height="20" class="star">
                                             <use xlink:href="./img/icons/icons.svg#star" />
                                         </svg>
-                                        <svg width="20" height="20">
+                                        <svg width="20" height="20" class="star">
                                             <use xlink:href="./img/icons/icons.svg#star" />
                                         </svg>
-                                        <svg width="20" height="20">
+                                        <svg width="20" height="20" class="star">
                                             <use xlink:href="./img/icons/icons.svg#star--not" />
                                         </svg>
-                                        <svg width="20" height="20">
+                                        <svg width="20" height="20" class="star">
                                             <use xlink:href="./img/icons/icons.svg#star--not" />
                                         </svg>
                                     </div>
@@ -313,6 +311,8 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="swiper-pagination"></div>
 
                 <div class="prev">
                     <svg width="20" height="20">
@@ -406,21 +406,21 @@
                     </div>
                 </div>
 
-                <a href="./img/gallery/gallery__item-1.jpg" class="gallery__item wrapper gallery-magnific" title="Милфорд-Саунд, Новая Зеландия <small>by Marsel Van Oosten</small>">
+                <a href="./img/gallery/gallery__item-1.jpg" class="gallery__item wrapper gallery-magnific" title="Милфорд-Саунд, Новая Зеландия<small>Памела Льюис</small>">
                     <img class="gallery__item-img" src="./img/gallery/gallery__item-1.jpg" width="465" height="420" loading="lazy" title="Милфорд-Саунд, Новая Зеландия" alt="gallery-1">
                     <div class="gallery__item-content">
                         <div class="gallery__item-name">Памела Льюис</div>
                         <h5 class="gallery__item-place">Милфорд-Саунд, Новая Зеландия</h5>
                     </div>
                 </a>
-                <a href="./img/gallery/gallery__item-2.jpg" class="gallery__item wrapper gallery-magnific">
+                <a href="./img/gallery/gallery__item-2.jpg" class="gallery__item wrapper gallery-magnific" title="Водопад Алинг-Алинг, Индонезия<small>Никитин Артём</small>">
                     <img class="gallery__item-img" src="./img/gallery/gallery__item-2.jpg" width="632" height="850" loading="lazy" title="Водопад Алинг-Алинг, Индонезия" alt="gallery-2">
                     <div class="gallery__item-content">
                         <div class="gallery__item-name">Никитин Артём</div>
                         <h5 class="gallery__item-place">Водопад Алинг-Алинг, Индонезия</h5>
                     </div>
                 </a>
-                <a href="./img/gallery/gallery__item-3.jpg" class="gallery__item wrapper gallery-magnific">
+                <a href="./img/gallery/gallery__item-3.jpg" class="gallery__item wrapper gallery-magnific" title="Гуттаннен, Швейцария<small>Джозеф Уиллис</small>">
                     <img class="gallery__item-img" src="./img/gallery/gallery__item-3.jpg" width="938" height="420" loading="lazy" title="Гуттаннен, Швейцария" alt="gallery-3">
                     <div class="gallery__item-content">
                         <div class="gallery__item-name">Джозеф Уиллис</div>
@@ -430,28 +430,28 @@
             </div>
 
             <div class="gallery__grid">
-                <a href="./img/gallery/gallery__item-4.jpg" class="gallery__item wrapper gallery-magnific">
+                <a href="./img/gallery/gallery__item-4.jpg" class="gallery__item wrapper gallery-magnific" title="Бали, Индонезия<small>Лерой Уоттс</small>">
                     <img class="gallery__item-img" src="./img/gallery/gallery__item-4.jpg" width="632" height="850" loading="lazy" title="Бали, Индонезия" alt="gallery-4">
                     <div class="gallery__item-content">
                         <div class="gallery__item-name">Лерой Уоттс</div>
                         <h5 class="gallery__item-place">Бали, Индонезия</h5>
                     </div>
                 </a>
-                <a href="./img/gallery/gallery__item-5.jpg" class="gallery__item wrapper gallery-magnific">
+                <a href="./img/gallery/gallery__item-5.jpg" class="gallery__item wrapper gallery-magnific" title="Гуттаннен, Швейцария<small>Джон Камбер</small>">
                     <img class="gallery__item-img" src="./img/gallery/gallery__item-5.jpg" width="465" height="420" loading="lazy" title="Долина огня, США" alt="gallery-5">
                     <div class="gallery__item-content">
                         <div class="gallery__item-name">Джон Камбер</div>
                         <h5 class="gallery__item-place">Долина огня, США</h5>
                     </div>
                 </a>
-                <a href="./img/gallery/gallery__item-6.jpg" class="gallery__item wrapper gallery-magnific">
+                <a href="./img/gallery/gallery__item-6.jpg" class="gallery__item wrapper gallery-magnific" title="Санта-Моника, США<small>Бирюкова Виктория</small>">
                     <img class="gallery__item-img" src="./img/gallery/gallery__item-6.jpg" width="465" height="420" loading="lazy" title="Санта-Моника, США" alt="gallery-6">
                     <div class="gallery__item-content">
                         <div class="gallery__item-name">Бирюкова Виктория</div>
                         <h5 class="gallery__item-place">Санта-Моника, США</h5>
                     </div>
                 </a>
-                <a href="./img/gallery/gallery__item-7.jpg" class="gallery__item wrapper gallery-magnific">
+                <a href="./img/gallery/gallery__item-7.jpg" class="gallery__item wrapper gallery-magnific" title="Восточный регион, Исландия<small>Пегги Дин</small>">
                     <img class="gallery__item-img" src="./img/gallery/gallery__item-7.jpg" width="938" height="420" loading="lazy" title="Восточный регион, Исландия" alt="gallery-7">
                     <div class="gallery__item-content">
                         <div class="gallery__item-name">Пегги Дин</div>
@@ -474,11 +474,7 @@
                     <li class="accordion__item active">
                         <div class="accordion__item-header">
                             <h6 class="accordion__item-title">Какие формы оплаты вы принимаете?</h6>
-                            <button class="accordion__item-btn">
-                                <svg width="20" height="20">
-                                    <use xlink:href="./img/icons/icons.svg#accordion__btn" />
-                                </svg>
-                            </button>
+                            <button class="accordion__item-btn"></button>
                         </div>
                         <p class="accordion__item-answer" style="display: block;"><span>Ответ.</span> При
                             бронировании
@@ -490,11 +486,7 @@
                     <li class="accordion__item">
                         <div class="accordion__item-header">
                             <h6 class="accordion__item-title">Как приобрести подарочный сертификат?</h6>
-                            <button class="accordion__item-btn">
-                                <svg width="20" height="20">
-                                    <use xlink:href="./img/icons/icons.svg#accordion__btn" />
-                                </svg>
-                            </button>
+                            <button class="accordion__item-btn"></button>
                         </div>
                         <p class="accordion__item-answer"><span>Ответ. </span>Купите подарочный сертификат,
                             связавшись
@@ -508,11 +500,7 @@
                     <li class="accordion__item">
                         <div class="accordion__item-header">
                             <h6 class="accordion__item-title">Какие услуги доступны мне до поездки?</h6>
-                            <button class="accordion__item-btn">
-                                <svg width="20" height="20">
-                                    <use xlink:href="./img/icons/icons.svg#accordion__btn" />
-                                </svg>
-                            </button>
+                            <button class="accordion__item-btn"></button>
                         </div>
                         <p class="accordion__item-answer"><span>Ответ. </span>Глобальные услуги по оказанию помощи
                             в поездках
@@ -525,11 +513,7 @@
                     <li class="accordion__item">
                         <div class="accordion__item-header">
                             <h6 class="accordion__item-title">Как мне отменить бронирование?</h6>
-                            <button class="accordion__item-btn">
-                                <svg width="20" height="20">
-                                    <use xlink:href="./img/icons/icons.svg#accordion__btn" />
-                                </svg>
-                            </button>
+                            <button class="accordion__item-btn"></button>
                         </div>
                         <p class="accordion__item-answer"><span>Ответ. </span>Чтобы отменить бронирование,
                             свяжитесь с
@@ -547,8 +531,8 @@
     ======================================================= -->
     <section class="blog" id="blog">
         <div class="container">
-            <div class="back-text">Блог</div>
             <div class="blog__inner">
+                <div class="back-text">Блог</div>
                 <div class="blog__posts-1">
                     <div class="blog__post">
                         <a href="#" class="blog__post-link">
@@ -615,80 +599,6 @@
         </div>
     </section>
     <!-- blog end -->
-
-
-    <!-- contact
-    ======================================================= -->
-    <section class="contact" id="contact">
-        <div class="container">
-            <div class="contact__inner">
-
-                <div class="contact__welcome">
-                    <h4 class="contact__title line">Cвяжитесь с нами</h4>
-                    <p class="contact__text">Спланируйте свое путешествие прямо сейчас </p>
-                </div>
-
-                <div class="contact__content">
-                    <div class="contact__info">
-                        <p class="contact__info-text">Наша миссия - «дать возможность каждому испытать
-                            уникальность
-                            мира
-                            вместе с нами».</p>
-                        <div class="contact__info-connection">
-                            <a href="mailto:info@route7company.com" class="contact__info-email">info@route7company.com</a>
-                            <a href="tel+77776665544" class="contact__info-phone">+7 777 666 5544</a>
-                        </div>
-                        <ul class="soclist">
-                            <li class="soclist__item">
-                                <a href="#" class="soclist__item-link">
-                                    <svg width="20" height="20">
-                                        <use xlink:href="./img/icons/icons.svg#facebook" />
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="soclist__item">
-                                <a href="#" class="soclist__item-link">
-                                    <svg width="20" height="20">
-                                        <use xlink:href="./img/icons/icons.svg#twitter" />
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="soclist__item">
-                                <a href="#" class="soclist__item-link">
-                                    <svg width="20" height="20">
-                                        <use xlink:href="./img/icons/icons.svg#vk" />
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="soclist__item">
-                                <a href="#" class="soclist__item-link">
-                                    <svg width="20" height="20">
-                                        <use xlink:href="./img/icons/icons.svg#instagram" />
-                                    </svg>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <form id="contact__form" class="contact__form">
-                        <div class="contact__form-inputs">
-                            <div class="contact__form-input input-block">
-                                <input type="text" id="contact__form-name" name="contact__form-name" class="input" placeholder="Имя:">
-                            </div>
-                            <div class="contact__form-input input-block">
-                                <input type="text" id="contact__form-email" name="contact__form-email" class="input" placeholder="Email:">
-                            </div>
-                        </div>
-                        <div class="contact__form-textarea input-block">
-                            <textarea name="contact__form-message" id="contact__form-message" class="input" placeholder="Сообщение:"></textarea>
-                        </div>
-                        <button type="submit" class="contact__form-button btn">Отправить</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- contact end -->
 
 
     @@include('./blocks/_footer.html')
