убран vanilla, улучшены слайдеры, исправленны ошибки валидатора

--- a/src/index.html
+++ b/src/index.html
@@ -71,14 +71,14 @@
             <div class="swiper-ways">
                 <div class="ways__items swiper-wrapper">
                     <div class="ways__item wrapper swiper-slide">
-                        <img src="./img/gallery/gallery__item-2.jpg" class="ways__item-img" width415" height="630" loading="lazy" title="Москва, Россия" alt="way-1">
+                        <img src="./img/gallery/gallery__item-2.jpg" class="ways__item-img" width="415" height="630" loading="lazy" title="Москва, Россия" alt="way-1">
                         <div class="ways__item-content">
                             <h4 class="ways__item-title">Москва, <span>Россия</span></h4>
                             <a href="#" class="ways__item-btn btn">узнать больше</a>
                         </div>
                     </div>
                     <div class="ways__item wrapper swiper-slide">
-                        <img src="./img/gallery/gallery__item-6.jpg" class="ways__item-img" width415" height="630" loading="lazy" title="Каппадокия, Турция" alt="way-2">
+                        <img src="./img/gallery/gallery__item-6.jpg" class="ways__item-img" width="415" height="630" loading="lazy" title="Каппадокия, Турция" alt="way-2">
                         <div class="ways__item-content">
                             <h4 class="ways__item-title">Каппадокия, <span>Турция</span></h4>
                             <a href="#" class="ways__item-btn btn">узнать больше</a>
@@ -198,17 +198,84 @@
                         <div class="places__item-img">
                             <img src="./img/gallery/gallery__item-2.jpg" width="440" height="500" loading="lazy" title="Лиссабон, Португалия" alt="place-1">
                         </div>
-                        <div class="places__item-content parallax-3d">
-                            <div class="parallax-3d">
-                                <h3 class="places__item-title">Лиссабон, <span>Португалия</span></h3>
-                                <p class="places__item-text">Мы организуем всевозможные горные походы круглый год:
-                                    поход на полдня и один день из Турина, походы выходного дня, длинные
-                                    треккинг, легкие комфортные туры и ходьба на снегоступах зимой.</p>
-                                <a href="#" class="places__item-btn btn">узнать больше</a>
-                                <div class="stars__wrapper parallax-3d">
-                                    <svg width="20" height="20" class="star parallax-3d">
+                        <div class="places__item-content">
+                            <h3 class="places__item-title">Лиссабон, <span>Португалия</span></h3>
+                            <p class="places__item-text">Мы организуем всевозможные горные походы круглый год:
+                                поход на полдня и один день из Турина, походы выходного дня, длинные
+                                треккинг, легкие комфортные туры и ходьба на снегоступах зимой.</p>
+                            <a href="#" class="places__item-btn btn">узнать больше</a>
+                            <div class="stars__wrapper">
+                                <svg width="20" height="20" class="star">
+                                    <use xlink:href="./img/icons/icons.svg#star" />
+                                </svg>
+                                <svg width="20" height="20" class="star">
+                                    <use xlink:href="./img/icons/icons.svg#star" />
+                                </svg>
+                                <svg width="20" height="20" class="star">
+                                    <use xlink:href="./img/icons/icons.svg#star" />
+                                </svg>
+                                <svg width="20" height="20" class="star">
+                                    <use xlink:href="./img/icons/icons.svg#star" />
+                                </svg>
+                                <svg width="20" height="20" class="star">
+                                    <use xlink:href="./img/icons/icons.svg#star--not" />
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="places__price">
+                            <span>$</span>107
+                        </div>
+                    </div>
+                    <div class="places__item swiper-slide">
+                        <div class="places__item-img">
+                            <img src="./img/ways/ways__item-6.jpg" width="440" height="500" loading="lazy" title="Милфорд-Саунд, Новая Зеландия" alt="place-2">
+                        </div>
+                        <div class="places__item-content">
+                            <h3 class="places__item-title">Милфорд-Саунд, <span>Новая Зеландия</span></h3>
+                            <p class="places__item-text">Милфорд Саунд, сердце национального парка Фьордленд,
+                                остается
+                                живым памятником первых настоящих лесов, появившихся на нашей планете, и других
+                                удивительных явлений природы. С точки зрения геологии Милфорд Саунд - классический
+                                морской фьорд, появившийся миллионы лет назад.</p>
+                            <a href="#" class="places__item-btn btn">узнать больше</a>
+                            <div class="stars__wrapper">
+                                <div class="stars">
+                                    <svg width="20" height="20" class="star">
                                         <use xlink:href="./img/icons/icons.svg#star" />
                                     </svg>
+                                    <svg width="20" height="20" class="star">
+                                        <use xlink:href="./img/icons/icons.svg#star" />
+                                    </svg>
+                                    <svg width="20" height="20" class="star">
+                                        <use xlink:href="./img/icons/icons.svg#star" />
+                                    </svg>
+                                    <svg width="20" height="20" class="star">
+                                        <use xlink:href="./img/icons/icons.svg#star" />
+                                    </svg>
+                                    <svg width="20" height="20" class="star">
+                                        <use xlink:href="./img/icons/icons.svg#star" />
+                                    </svg>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="places__price">
+                            <span>$</span>327
+                        </div>
+                    </div>
+                    <div class="places__item swiper-slide">
+                        <div class="places__item-img">
+                            <img src="./img/ways/ways__item-4.jpg" width="440" height="500" loading="lazy" title="Klöntalersee, Гларус, Швейцария" alt="place-3">
+                        </div>
+                        <div class="places__item-content">
+                            <h3 class="places__item-title">Klöntalersee, Гларус, <span>Швейцария</span></h3>
+                            <p class="places__item-text">Клентальское озеро – это необыкновенной красоты природный
+                                водный объект. Оно невелико, расположено высоко в горах (на высоте до километра).
+                                Вытянутая и изогнутая форма не дает возможности увидеть озеро целиком иначе, чем
+                                сверху,
+                                и то, это возможно далеко не всегда. Однако, красота этого места завораживает.</p>
+                            <a href="#" class="places__item-btn btn">узнать больше</a>
+                            <div class="stars__wrapper">
+                                <div class="stars">
                                     <svg width="20" height="20" class="star">
                                         <use xlink:href="./img/icons/icons.svg#star" />
                                     </svg>
@@ -221,93 +288,14 @@
                                     <svg width="20" height="20" class="star">
                                         <use xlink:href="./img/icons/icons.svg#star--not" />
                                     </svg>
+                                    <svg width="20" height="20" class="star">
+                                        <use xlink:href="./img/icons/icons.svg#star--not" />
+                                    </svg>
                                 </div>
                             </div>
                         </div>
-                        <div class="places__price parallax-3d">
-                            <div class="parallax-3d">
-                                <span>$</span>107
-                            </div>
-                        </div>
-                    </div>
-                    <div class="places__item swiper-slide">
-                        <div class="places__item-img">
-                            <img src="./img/ways/ways__item-6.jpg" width="440" height="500" loading="lazy" title="Милфорд-Саунд, Новая Зеландия" alt="place-2">
-                        </div>
-                        <div class="places__item-content parallax-3d">
-                            <div class="parallax-3d">
-                                <h3 class="places__item-title">Милфорд-Саунд, <span>Новая Зеландия</span></h3>
-                                <p class="places__item-text">Милфорд Саунд, сердце национального парка Фьордленд,
-                                    остается
-                                    живым памятником первых настоящих лесов, появившихся на нашей планете, и других
-                                    удивительных явлений природы. С точки зрения геологии Милфорд Саунд - классический
-                                    морской фьорд, появившийся миллионы лет назад.</p>
-                                <a href="#" class="places__item-btn btn">узнать больше</a>
-                                <div class="stars__wrapper">
-                                    <div class="stars parallax-3d">
-                                        <svg width="20" height="20" class="star">
-                                            <use xlink:href="./img/icons/icons.svg#star" />
-                                        </svg>
-                                        <svg width="20" height="20" class="star">
-                                            <use xlink:href="./img/icons/icons.svg#star" />
-                                        </svg>
-                                        <svg width="20" height="20" class="star">
-                                            <use xlink:href="./img/icons/icons.svg#star" />
-                                        </svg>
-                                        <svg width="20" height="20" class="star">
-                                            <use xlink:href="./img/icons/icons.svg#star" />
-                                        </svg>
-                                        <svg width="20" height="20" class="star">
-                                            <use xlink:href="./img/icons/icons.svg#star" />
-                                        </svg>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="places__price parallax-3d">
-                            <div class="parallax-3d">
-                                <span>$</span>327
-                            </div>
-                        </div>
-                    </div>
-                    <div class="places__item swiper-slide">
-                        <div class="places__item-img">
-                            <img src="./img/ways/ways__item-4.jpg" width="440" height="500" loading="lazy" title="Klöntalersee, Гларус, Швейцария" alt="place-3">
-                        </div>
-                        <div class="places__item-content parallax-3d">
-                            <div class="parallax-3d">
-                                <h3 class="places__item-title">Klöntalersee, Гларус, <span>Швейцария</span></h3>
-                                <p class="places__item-text">Клентальское озеро – это необыкновенной красоты природный
-                                    водный объект. Оно невелико, расположено высоко в горах (на высоте до километра).
-                                    Вытянутая и изогнутая форма не дает возможности увидеть озеро целиком иначе, чем
-                                    сверху,
-                                    и то, это возможно далеко не всегда. Однако, красота этого места завораживает.</p>
-                                <a href="#" class="places__item-btn btn">узнать больше</a>
-                                <div class="stars__wrapper">
-                                    <div class="stars parallax-3d">
-                                        <svg width="20" height="20" class="star">
-                                            <use xlink:href="./img/icons/icons.svg#star" />
-                                        </svg>
-                                        <svg width="20" height="20" class="star">
-                                            <use xlink:href="./img/icons/icons.svg#star" />
-                                        </svg>
-                                        <svg width="20" height="20" class="star">
-                                            <use xlink:href="./img/icons/icons.svg#star" />
-                                        </svg>
-                                        <svg width="20" height="20" class="star">
-                                            <use xlink:href="./img/icons/icons.svg#star--not" />
-                                        </svg>
-                                        <svg width="20" height="20" class="star">
-                                            <use xlink:href="./img/icons/icons.svg#star--not" />
-                                        </svg>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="places__price parallax-3d">
-                            <div class="parallax-3d">
-                                <span>$</span>107
-                            </div>
+                        <div class="places__price">
+                            <span>$</span>107
                         </div>
                     </div>
                 </div>
@@ -332,16 +320,16 @@
 
     <!-- video
     ======================================================= -->
-    <section class="video">
+    <div class="video">
         <div class="video__inner">
             <div class="video__img wrapper">
-                <img src="./img/video.jpg" width="100%" height="450" loading="lazy" alt="video">
+                <img src="./img/video.jpg" height="450" loading="lazy" alt="video">
             </div>
             <a href="https://www.youtube.com/watch?v=T6x5PoSmErc" class="play video-youtube">
                 <span></span>
             </a>
         </div>
-    </section>
+    </div>
     <!-- video end -->
 
 
