автозапуск swiper при scroll'e и начало функционала смены языка

--- a/src/blocks/_header.html
+++ b/src/blocks/_header.html
@@ -13,7 +13,8 @@
 
       <ul class="menu__list">
         <li class="menu__list-item">
-          <a class="link" href="#ways">Направления</a>
+          <a class="link" href="#ways" lang="ru">Направления</a>
+          <a class="link" href="#ways" lang="en">Ways</a>
         </li>
         <li class="menu__list-item">
           <a class="link" href="#places">Цены</a>
@@ -36,6 +37,7 @@
         <option class="language__option">ru</option>
         <option class="language__option">en</option>
       </select>
+
 
       <div class="hamburger__wrapper">
         <button class="hamburger">
