--- a/src/blocks/_head.html
+++ b/src/blocks/_head.html
@@ -4,16 +4,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Проект 1 | Travel</title>
   <meta name="description" content="Проект 1 | Travel" />
-  <meta name="keywords"
-    content="портфолио, портфолио верстальщика, верстка, Dmitriy Bozhko, Дмитрий Божко, красивое портфолио, digikrash" />
+  <meta name="keywords" content="портфолио, портфолио верстальщика, верстка, Dmitriy Bozhko, Дмитрий Божко, красивое портфолио, digikrash" />
   <meta name="author" content="Dmitriy Bozhko / DigiKrash" />
-  
+
   <!-- Favicon -->
   <link rel="icon" href="./favicon.png" type="image/png">
 
   <!-- Styles -->
   <link rel="stylesheet" href="./css/style-min.css">
-
+  
   <!-- Preload -->
   <script>
     window.onload = function () {
