лучший способ переводчика

--- a/src/blocks/_footer.html
+++ b/src/blocks/_footer.html
@@ -5,16 +5,28 @@
     <div class="container">
       <div class="contact__inner">
         <div class="contact__welcome">
-          <h4 class="contact__title">Cвяжитесь с нами</h4>
-          <p class="contact__text">Спланируйте свое путешествие прямо сейчас </p>
+          <h4 class="contact__title">
+            Cвяжитесь с нами
+            <!--{en}Contact us-->
+          </h4>
+          <p class="contact__text">
+            Спланируйте свое путешествие прямо сейчас
+            <!--{en}Plan your trip now-->
+          </p>
         </div>
 
         <div class="contact__content">
           <div class="contact__info">
-            <p class="contact__info-text">Наша миссия - «дать возможность каждому испытать
+            <p class="contact__info-text">
+              Наша миссия - «дать возможность каждому испытать
               уникальность
               мира
-              вместе с нами».</p>
+              вместе с нами».
+              <!--{en}Our mission is "to enable everyone to experience
+              uniqueness
+              peace
+              together with us".-->
+            </p>
             <div class="contact__info-connection">
               <a href="mailto:info@route7company.com" class="contact__info-item">
                 <svg width="20" height="20">
@@ -64,16 +76,19 @@
           <form id="contact__form" class="contact__form">
             <div class="contact__form-inputs">
               <div class="contact__form-input input-block">
-                <input type="text" id="contact__form-name" name="contact__form-name" class="input" placeholder="Имя:">
+                <input type="text" id="contact__form-name" name="contact__form-name" class="input" placeholder="Имя:" placeholder-en="Name:">
               </div>
               <div class="contact__form-input input-block">
                 <input type="text" id="contact__form-email" name="contact__form-email" class="input" placeholder="Email:">
               </div>
             </div>
             <div class="contact__form-textarea input-block">
-              <textarea name="contact__form-message" id="contact__form-message" class="input" placeholder="Сообщение:"></textarea>
+              <textarea name="contact__form-message" id="contact__form-message" class="input" placeholder="Сообщение:" placeholder-en="Message:"></textarea>
             </div>
-            <button type="submit" class="contact__form-button btn">Отправить</button>
+            <button type="submit" class="contact__form-button btn">
+              Отправить
+              <!--{en}Send-->
+            </button>
           </form>
         </div>
       </div>
@@ -84,26 +99,46 @@
 
     <ul class="footer__list">
       <li class="menu__list-item">
-        <a class="link" href="#ways">Направления</a>
+        <a class="link" href="#ways">
+          Направления
+          <!--{en}Directions-->
+        </a>
       </li>
       <li class="menu__list-item">
-        <a class="link" href="#places">Цены</a>
+        <a class="link" href="#places">
+          Цены
+          <!--{en}Prices-->
+        </a>
       </li>
       <li class="menu__list-item">
-        <a class="link" href="#gallery">Галерея</a>
+        <a class="link" href="#gallery">
+          Галерея
+          <!--{en}Gallery-->
+        </a>
       </li>
       <li class="menu__list-item">
-        <a class="link" href="#faq">FAQ</a>
+        <a class="link" href="#faq">
+          FAQ
+          <!--{en}FAQ-->
+        </a>
       </li>
       <li class="menu__list-item">
-        <a class="link" href="#blog">Блог</a>
+        <a class="link" href="#blog">
+          Блог
+          <!--{en}Blog-->
+        </a>
       </li>
       <li class="menu__list-item">
-        <a class="link" href="#contact">Контакты</a>
+        <a class="link" href="#contact">
+          Контакты
+          <!--{en}Contacts-->
+        </a>
       </li>
     </ul>
 
-    <small class="footer__copy">Создатель шаблона <b>Dmitriy Bozhko / DIGIKRASH</b></small>
+    <small class="footer__copy">Создатель шаблона
+      <!--{en}Template Creator --><b>Dmitriy Bozhko / DIGIKRASH</b>
+    </small>
 
   </div>
 </footer>
