--- a/src/blocks/_head.html
+++ b/src/blocks/_head.html
@@ -12,8 +12,10 @@
 
   <!-- Styles -->
   <link rel="stylesheet" href="./css/style-min.css">
-  
+
   <!-- Preload -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script> -->
+  
   <script>
     window.onload = function () {
       document.body.classList.add('loaded-hiding');
