--- a/src/blocks/_header.html
+++ b/src/blocks/_header.html
@@ -13,23 +13,40 @@
 
       <ul class="menu__list">
         <li class="menu__list-item">
-          <a class="link" href="#ways" lang="ru">Направления</a>
-          <a class="link" href="#ways" lang="en">Ways</a>
+          <a class="link" href="#ways">
+            Направления
+            <!--{en}Directions-->
+          </a>
         </li>
         <li class="menu__list-item">
-          <a class="link" href="#places">Цены</a>
+          <a class="link" href="#places">
+            Цены
+            <!--{en}Prices-->
+          </a>
         </li>
         <li class="menu__list-item">
-          <a class="link" href="#gallery">Галерея</a>
+          <a class="link" href="#gallery">
+            Галерея
+            <!--{en}Gallery-->
+          </a>
         </li>
         <li class="menu__list-item">
-          <a class="link" href="#faq">FAQ</a>
+          <a class="link" href="#faq">
+            FAQ
+            <!--{en}FAQ-->
+          </a>
         </li>
         <li class="menu__list-item">
-          <a class="link" href="#blog">Блог</a>
+          <a class="link" href="#blog">
+            Блог
+            <!--{en}Blog-->
+          </a>
         </li>
         <li class="menu__list-item">
-          <a class="link" href="#contact">Контакты</a>
+          <a class="link" href="#contact">
+            Контакты
+            <!--{en}Contacts-->
+          </a>
         </li>
       </ul>
 
@@ -37,7 +54,6 @@
         <option class="language__option">ru</option>
         <option class="language__option">en</option>
       </select>
-
 
       <div class="hamburger__wrapper">
         <button class="hamburger">
