приведение всего в порядок

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 @@include('./blocks/_head.html')
 
 <body>
 
     @@include('./blocks/_header.html')
+
+    <!-- cursor -->
+    <div class="cursor-dot-outline"></div>
 
 
     <!-- top
@@ -31,7 +34,7 @@
         </div>
     </section>
     <!-- top end -->
-
+    
 
     <!-- about
     ======================================================= -->
@@ -873,7 +876,6 @@
 
 
     @@include('./blocks/_footer.html')
-
 
 
     <!-- Scripts -->
