--- a/src/blocks/_footer.html
+++ b/src/blocks/_footer.html
@@ -83,7 +83,8 @@
               </div>
             </div>
             <div class="contact__form-textarea input-block">
-              <textarea name="contact__form-message" id="contact__form-message" class="input" placeholder="Сообщение:" placeholder-en="Message:"></textarea>
+              <textarea name="contact__form-message" id="contact__form-message" class="input" placeholder="Сообщение:" lang="ru"></textarea>
+              <textarea name="contact__form-message" id="contact__form-message" class="input" placeholder="Message:" lang="en"></textarea>
             </div>
             <button type="submit" class="contact__form-button btn">
               Отправить
