--- a/src/blocks/_head.html
+++ b/src/blocks/_head.html
@@ -2,7 +2,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Проект 1 | Travel</title>
+  <title>
+    Проект 1
+    <!--{en}Project 1-->
+  </title>
   <meta name="description" content="Проект 1 | Travel" />
   <meta name="keywords" content="портфолио, портфолио верстальщика, верстка, Dmitriy Bozhko, Дмитрий Божко, красивое портфолио, digikrash" />
   <meta name="author" content="Dmitriy Bozhko / DigiKrash" />
