--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
                 <div class="about__content wow animate__animated animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
                     <h2 class="about__content-title">
                         Кто мы
-                        <!--{en}Who are we-->
+                        <!--{en}Who're we-->
                     </h2>
 
                     <h4 class="about__content-pretitle">
@@ -587,7 +587,6 @@
                             Водопад Алинг-Алинг, Индонезия
                             <!--{en}Aling Aling Waterfall, Indonesia-->
                         </h5>
-                        <h5 class="gallery__item-place"></h5>
                     </div>
                 </a>
                 <a href="./img/gallery/gallery__item-3.jpg" class="gallery__item wrapper gallery-magnific wow animate__animated animate__fadeInUp" data-wow-duration="1s">
@@ -779,7 +778,7 @@
 
     <!-- blog
     ======================================================= -->
-    <section class="blog" id="blog">
+    <section class="blog wow animate__animated animate__fadeInUp" data-wow-duration="1.3s" id="blog">
         <div class="container">
             <div class="blog__inner">
                 <div class="back-text">
